tests/k8s_testcases/network-policy-checks-bad-path/ipblock_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      # wrong type
        - ipBlock:
           - cidr: 0.0.0.0/0
             except:
              - 10.0.0.0/8
    -  ports:
        - port: 53
          protocol: UDP
